Refactor: resolve SonarQube major code smells